--- a/src/components/Navigation/navigation.css
+++ b/src/components/Navigation/navigation.css
@@ -1,1 +1,10 @@
-/*# sourceMappingURL=navigation.css.map */
+ul > div {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+ul > div li {
+  flex: 1;
+  padding: 0.75rem 0;
+  text-align: center;
+}/*# sourceMappingURL=navigation.css.map */
