Edit 'main views' container styles

--- a/src/components/About/about.scss
+++ b/src/components/About/about.scss
@@ -1,1 +1,9 @@
 @import '../../styles/variables/variables.scss';
+
+.aboutContainer {
+  @include viewPadding();
+
+  h2 {
+    @include viewHeading();
+  }
+}
