--- a/src/components/About/about.css
+++ b/src/components/About/about.css
@@ -1,1 +1,7 @@
-/*# sourceMappingURL=about.css.map */
+.aboutContainer {
+  padding: 1.5rem 1rem;
+}
+.aboutContainer h2 {
+  font-size: 20px;
+  padding-bottom: 1rem;
+}/*# sourceMappingURL=about.css.map */
