--- a/src/components/Instructions/instructions.css
+++ b/src/components/Instructions/instructions.css
@@ -1,1 +1,7 @@
-/*# sourceMappingURL=instructions.css.map */
+.instructionsContainer {
+  padding: 1.5rem 1rem;
+}
+.instructionsContainer h2 {
+  font-size: 20px;
+  padding-bottom: 1rem;
+}/*# sourceMappingURL=instructions.css.map */
