--- a/src/components/MainView/mainView.scss
+++ b/src/components/MainView/mainView.scss
@@ -1,1 +1,9 @@
 @import '../../styles/variables/variables.scss';
+
+.mainContainer {
+  @include viewPadding();
+
+  h2 {
+    @include viewHeading();
+  }
+}
