--- a/src/styles/variables/variables.scss
+++ b/src/styles/variables/variables.scss
@@ -6,7 +6,8 @@ $mainViewBgColor: #f3f3f3;
 
 // - Font
 $globalFontFamily: Arial, Helvetica, sans-serif;
-$viewHeadingFontSize: 20px;
+$appHeadingFontSize: 20px;
+$viewHeadingFontSize: 18px;
 
 // ***********
 // Mixins
