--- a/src/components/Layout/layout.css
+++ b/src/components/Layout/layout.css
@@ -1,1 +1,5 @@
-/*# sourceMappingURL=layout.css.map */
+h1 {
+  padding: 1rem;
+  font-size: 20px;
+  text-align: center;
+}/*# sourceMappingURL=layout.css.map */
