--- a/src/components/MainView/mainView.css
+++ b/src/components/MainView/mainView.css
@@ -1,7 +1,16 @@
 .mainContainer {
   padding: 1.5rem 1rem;
+  display: flex;
+  gap: 2rem;
 }
-.mainContainer h2 {
-  font-size: 18px;
+.mainContainer h3 {
+  font-size: 16px;
   padding-bottom: 1rem;
+}
+.mainContainer > div {
+  display: flex;
+}
+.mainContainer > div:nth-of-type(2) {
+  flex: 1;
+  flex-direction: column;
 }/*# sourceMappingURL=mainView.css.map */
