--- a/src/styles/variables/variables.scss
+++ b/src/styles/variables/variables.scss
@@ -9,6 +9,9 @@ $globalFontFamily: Arial, Helvetica, sans-serif;
 $appHeadingFontSize: 20px;
 $viewHeadingFontSize: 18px;
 
+// - Size
+$appHeight: 400px;
+
 // ***********
 // Mixins
 // ***********
