--- a/src/components/KeyCollection/keyCollection.css
+++ b/src/components/KeyCollection/keyCollection.css
@@ -1,1 +1,13 @@
-/*# sourceMappingURL=keyCollection.css.map */
+.keyCollectionContainer {
+  height: 100%;
+}
+.keyCollectionContainer ul {
+  height: 100%;
+}
+.keyCollectionContainer ul > div {
+  height: 100%;
+  max-height: 218.5px;
+  padding: 0.75rem;
+  border: 1px solid #333333;
+  overflow-y: auto;
+}/*# sourceMappingURL=keyCollection.css.map */
