--- a/src/components/Layout/layout.css
+++ b/src/components/Layout/layout.css
@@ -1,3 +1,17 @@
+.layoutContainer {
+  height: 400px;
+  display: flex;
+  flex-direction: column;
+}
+
+header {
+  height: 97px;
+}
+
+main {
+  flex: 1;
+}
+
 h1 {
   padding: 1rem;
   font-size: 20px;
