--- a/src/components/MainView/mainView.css
+++ b/src/components/MainView/mainView.css
@@ -1,4 +1,6 @@
 .mainContainer {
+  height: 100%;
+  border: 1px solid #333333;
   padding: 1.5rem 1rem;
   display: flex;
   gap: 2rem;
@@ -7,10 +9,8 @@
   font-size: 16px;
   padding-bottom: 1rem;
 }
-.mainContainer > div {
-  display: flex;
-}
 .mainContainer > div:nth-of-type(2) {
+  display: flex;
   flex: 1;
   flex-direction: column;
 }/*# sourceMappingURL=mainView.css.map */
