--- a/src/components/MainView/mainView.scss
+++ b/src/components/MainView/mainView.scss
@@ -1,6 +1,8 @@
 @import '../../styles/variables/variables.scss';
 
 .mainContainer {
+  height: 100%;
+  border: 1px solid #333333;
   @include viewPadding();
   display: flex;
   gap: 2rem;
@@ -10,9 +12,8 @@
   }
 
   & > div {
-    display: flex;
-
     &:nth-of-type(2) {
+      display: flex;
       flex: 1;
       flex-direction: column;
     }
