--- a/src/components/Navigation/navigation.css
+++ b/src/components/Navigation/navigation.css
@@ -1,9 +1,9 @@
-ul > div {
+.navigationContainer ul > div {
   display: flex;
   align-items: center;
   justify-content: center;
 }
-ul > div li {
+.navigationContainer ul > div li {
   flex: 1;
   padding: 0.75rem 0;
   text-align: center;
