--- a/src/components/KeyInput/keyInput.css
+++ b/src/components/KeyInput/keyInput.css
@@ -1,1 +1,9 @@
-/*# sourceMappingURL=keyInput.css.map */
+.keyInputContainer {
+  padding-bottom: 1rem;
+  width: 80px;
+}
+.keyInputContainer input {
+  font-size: 16px;
+  width: 100%;
+  padding: 0.25rem 0.5rem;
+}/*# sourceMappingURL=keyInput.css.map */
