--- a/src/components/KeyInput/keyInput.scss
+++ b/src/components/KeyInput/keyInput.scss
@@ -1,1 +1,12 @@
 @import '../../styles/variables/variables.scss';
+
+.keyInputContainer {
+  padding-bottom: 1rem;
+  width: 80px;
+
+  input {
+    font-size: 16px;
+    width: 100%;
+    padding: 0.25rem 0.5rem;
+  }
+}
