--- a/src/components/Template/template.scss
+++ b/src/components/Template/template.scss
@@ -1,1 +1,34 @@
 @import '../../styles/variables/variables.scss';
+
+.templateContainer {
+  flex: 1;
+  display: flex;
+  flex-direction: column;
+
+  textarea {
+    flex: 1;
+    width: 100%;
+    padding: 0.5rem;
+    font-size: 16px;
+    resize: none;
+  }
+
+  // *** Save button container ***
+  & > div {
+    padding-top: 0.5rem;
+
+    & span {
+      display: inline-block;
+      padding: 0.5rem 0.75rem;
+      text-align: center;
+      color: #333333;
+      background-color: rgb(235, 235, 235);
+
+      &:hover {
+        cursor: pointer;
+        color: #fefefe;
+        background-color: rgb(173, 173, 173);
+      }
+    }
+  }
+}
