--- a/src/components/KeyItem/keyItem.css
+++ b/src/components/KeyItem/keyItem.css
@@ -1,1 +1,6 @@
-/*# sourceMappingURL=keyItem.css.map */
+.keyItemContainer span {
+  display: inline-block;
+  width: 100%;
+  text-align: center;
+  padding: 0.5rem 0;
+}/*# sourceMappingURL=keyItem.css.map */
