--- a/src/components/KeyItem/keyItem.scss
+++ b/src/components/KeyItem/keyItem.scss
@@ -1,1 +1,10 @@
 @import '../../styles/variables/variables.scss';
+
+.keyItemContainer {
+  & span {
+    display: inline-block;
+    width: 100%;
+    text-align: center;
+    padding: 0.5rem 0;
+  }
+}
