Edit Navigation styles
- Match Navigation background-color to corresponding component view.
- Apply border-radius to li tags to give a tab-like appearance.

--- a/src/components/About/about.css
+++ b/src/components/About/about.css
@@ -1,5 +1,7 @@
 .aboutContainer {
+  height: 100%;
   padding: 1.5rem 1rem;
+  background-color: #729c9b;
 }
 .aboutContainer h2 {
   font-size: 18px;
