--- a/src/components/Instructions/instructions.css
+++ b/src/components/Instructions/instructions.css
@@ -1,5 +1,7 @@
 .instructionsContainer {
+  height: 100%;
   padding: 1.5rem 1rem;
+  background-color: #0b605e;
 }
 .instructionsContainer h2 {
   font-size: 18px;
