--- a/src/styles/variables/variables.scss
+++ b/src/styles/variables/variables.scss
@@ -2,9 +2,12 @@
 // Variables
 // ***********
 // - Color
-$mainViewBgColor: #f3f3f3;
+$myTextBackgroundColor: #c7d7d7;
+$aboutBackgroundColor: #729c9b;
+$instructionsBackgroundColor: #0b605e;
 
 // - Font
+$lightFontColor: #fefefe;
 $globalFontFamily: Arial, Helvetica, sans-serif;
 $appHeadingFontSize: 20px;
 $viewHeadingFontSize: 18px;
