--- a/src/components/KeyCollection/keyCollection.scss
+++ b/src/components/KeyCollection/keyCollection.scss
@@ -4,13 +4,12 @@
   height: 100%;
 
   ul {
-    height: 100%;
-
     & > div {
       height: 100%;
       max-height: 218.5px;
       border: 1px solid #767676;
       overflow-y: auto;
+      background-color: #ffffff;
     }
   }
 }
