--- a/src/components/MainView/mainView.css
+++ b/src/components/MainView/mainView.css
@@ -1,9 +1,9 @@
 .mainContainer {
   height: 100%;
-  border: 1px solid #333333;
   padding: 1.5rem 1rem;
   display: flex;
   gap: 2rem;
+  background-color: #c7d7d7;
 }
 .mainContainer h3 {
   font-size: 16px;
