--- a/src/components/Navigation/navigation.scss
+++ b/src/components/Navigation/navigation.scss
@@ -9,8 +9,26 @@
 
       li {
         flex: 1;
-        padding: 0.75rem 0;
         text-align: center;
+        border-radius: 10px 10px 0 0;
+
+        a {
+          width: 100%;
+          padding: 0.75rem 0;
+          display: inline-block;
+        }
+
+        &:nth-of-type(1) {
+          background-color: $myTextBackgroundColor;
+        }
+        &:nth-of-type(2) {
+          color: $lightFontColor;
+          background-color: $aboutBackgroundColor;
+        }
+        &:nth-of-type(3) {
+          color: $lightFontColor;
+          background-color: $instructionsBackgroundColor;
+        }
       }
     }
   }
