--- a/src/components/Template/template.scss
+++ b/src/components/Template/template.scss
@@ -26,7 +26,7 @@
 
       &:hover {
         cursor: pointer;
-        color: #fefefe;
+        color: $lightFontColor;
         background-color: rgb(173, 173, 173);
       }
     }
