Add custom scrollbar styles

--- a/src/components/KeyCollection/keyCollection.scss
+++ b/src/components/KeyCollection/keyCollection.scss
@@ -10,6 +10,8 @@
       border: 1px solid #767676;
       overflow-y: auto;
       background-color: #ffffff;
+
+      @include scrollbarStyle();
     }
   }
 }
