--- a/src/styles/variables/variables.scss
+++ b/src/styles/variables/variables.scss
@@ -31,3 +31,15 @@ $appHeight: 400px;
   font-size: $viewHeadingFontSize;
   padding-bottom: 1rem;
 }
+
+@mixin scrollbarStyle {
+  &::-webkit-scrollbar {
+    width: 5px;
+  }
+  &::-webkit-scrollbar-track {
+    background-color: #f1f1f1;
+  }
+  &::-webkit-scrollbar-thumb {
+    background-color: #bdbaba;
+  }
+}
