--- a/src/components/KeyCollection/keyCollection.css
+++ b/src/components/KeyCollection/keyCollection.css
@@ -7,4 +7,13 @@
   border: 1px solid #767676;
   overflow-y: auto;
   background-color: #ffffff;
+}
+.keyCollectionContainer ul > div::-webkit-scrollbar {
+  width: 5px;
+}
+.keyCollectionContainer ul > div::-webkit-scrollbar-track {
+  background-color: #f1f1f1;
+}
+.keyCollectionContainer ul > div::-webkit-scrollbar-thumb {
+  background-color: #bdbaba;
 }/*# sourceMappingURL=keyCollection.css.map */
