--- a/src/components/Template/template.scss
+++ b/src/components/Template/template.scss
@@ -11,6 +11,8 @@
     padding: 0.5rem;
     font-size: 16px;
     resize: none;
+
+    @include scrollbarStyle();
   }
 
   // *** Save button container ***
