--- a/src/components/MainView/mainView.scss
+++ b/src/components/MainView/mainView.scss
@@ -16,6 +16,26 @@
       flex: 1;
       display: flex;
       flex-direction: column;
+
+      & > div {
+        &:nth-of-type(3) {
+          padding-top: 0.5rem;
+
+          & span {
+            display: inline-block;
+            padding: 0.5rem 0.75rem;
+            text-align: center;
+            color: #333333;
+            background-color: rgb(235, 235, 235);
+
+            &:hover {
+              cursor: pointer;
+              color: $lightFontColor;
+              background-color: rgb(173, 173, 173);
+            }
+          }
+        }
+      }
     }
   }
 }
