--- a/src/components/KeyCollection/keyCollection.css
+++ b/src/components/KeyCollection/keyCollection.css
@@ -1,9 +1,13 @@
 .keyCollectionContainer {
   height: 100%;
+  display: flex;
+  flex-direction: column;
+}
+.keyCollectionContainer ul {
+  flex: 1;
 }
 .keyCollectionContainer ul > div {
-  height: 100%;
-  max-height: 218.5px;
+  height: 228.5px;
   border: 1px solid #767676;
   overflow-y: auto;
   background-color: #ffffff;
