--- a/src/components/KeyCollection/keyCollection.scss
+++ b/src/components/KeyCollection/keyCollection.scss
@@ -2,11 +2,16 @@
 
 .keyCollectionContainer {
   height: 100%;
+  display: flex;
+  flex-direction: column;
 
   ul {
+    flex: 1;
+
     & > div {
-      height: 100%;
-      max-height: 218.5px;
+      // - height is $appHeight - height of All Keys heading, to
+      //   avoid contents overflowing app's maximum height.
+      height: 228.5px;
       border: 1px solid #767676;
       overflow-y: auto;
       background-color: #ffffff;
