Update About and Instructions styles and structure

--- a/src/components/About/about.css
+++ b/src/components/About/about.css
@@ -3,7 +3,11 @@
   padding: 1.5rem 1rem;
   background-color: #729c9b;
 }
-.aboutContainer h2 {
+.aboutContainer div {
+  padding: 1rem;
+  background-color: #fefefe;
+}
+.aboutContainer div h2 {
   font-size: 18px;
   padding-bottom: 1rem;
 }/*# sourceMappingURL=about.css.map */
