--- a/src/components/KeyInput/keyInput.scss
+++ b/src/components/KeyInput/keyInput.scss
@@ -2,11 +2,14 @@
 
 .keyInputContainer {
   padding-bottom: 1rem;
-  width: 80px;
 
   input {
+    width: 80px;
     font-size: 16px;
-    width: 100%;
     padding: 0.25rem 0.5rem;
+  }
+
+  p {
+    @include errorMessageStyle();
   }
 }
