--- a/src/styles/variables/variables.scss
+++ b/src/styles/variables/variables.scss
@@ -15,6 +15,9 @@ $viewHeadingFontSize: 18px;
 // - Size
 $appHeight: 400px;
 
+// - Spacing
+$buttonXYPadding: 0.5rem 0.75rem;
+
 // ***********
 // Mixins
 // ***********
