--- a/src/components/MainView/mainView.scss
+++ b/src/components/MainView/mainView.scss
@@ -23,7 +23,7 @@
 
           & span {
             display: inline-block;
-            padding: 0.5rem 0.75rem;
+            padding: $buttonXYPadding;
             text-align: center;
             color: #333333;
             background-color: rgb(235, 235, 235);
