--- a/src/components/Modal/modal.css
+++ b/src/components/Modal/modal.css
@@ -5,7 +5,7 @@
   left: 0;
   width: 100%;
   height: 100%;
-  background-color: rgba(11, 96, 94, 0.9);
+  background-color: rgba(169, 169, 169, 0.8);
   z-index: 1;
 }
 .modalContainer.active {
@@ -21,20 +21,54 @@
 }
 
 .modalBox {
-  width: 90%;
+  position: relative;
+  width: 85%;
+  padding: 1rem 1rem 100px 1rem;
   background-color: white;
-  padding: 1rem;
+  border-radius: 8px;
+  display: flex;
+  gap: 25px;
 }
-.modalBox > p {
-  padding-bottom: 2rem;
+
+.icon {
+  position: relative;
+  display: inline-flex;
+  justify-content: center;
+  align-items: center;
+  width: 50px;
+  height: 50px;
+  background-color: #c7d7d7;
+  border-radius: 50%;
+}
+.icon > span {
+  position: relative;
+  top: -3px;
+  display: inline-block;
+  width: 30px;
+  height: 30px;
+}
+.icon > span > svg {
+  width: 100%;
+}
+
+.heading {
+  height: 50px;
+  display: flex;
+  align-items: center;
+}
+.heading h3 {
+  display: inline-block;
+  font-size: 18px;
 }
 
 .buttonContainer {
-  display: flex;
-  justify-content: flex-end;
-}
-.buttonContainer > span {
-  padding: 0.5rem 0.75rem;
-  background-color: #0b605e;
+  position: absolute;
+  bottom: 0;
+  left: 0;
+  width: 100%;
+  padding: 1rem;
+  text-align: center;
   color: #fefefe;
+  background-color: #0b605e;
+  border-radius: 0 0 8px 8px;
 }/*# sourceMappingURL=modal.css.map */
