--- a/src/components/KeyCollection/keyCollection.scss
+++ b/src/components/KeyCollection/keyCollection.scss
@@ -19,3 +19,16 @@
     }
   }
 }
+
+.keyItem {
+  & span {
+    display: inline-block;
+    width: 100%;
+    text-align: center;
+    padding: 0.5rem 0;
+  }
+
+  &.selected {
+    background-color: rgb(219, 238, 255);
+  }
+}
