--- a/src/components/Template/template.scss
+++ b/src/components/Template/template.scss
@@ -14,4 +14,16 @@
 
     @include scrollbarStyle();
   }
+
+  & > div {
+    flex: 1;
+    width: 100%;
+    max-height: 105px;
+    height: 105px;
+    padding: 0.5rem;
+    font-size: 16px;
+    background-color: white;
+    overflow-y: auto;
+    @include scrollbarStyle();
+  }
 }
