Update deleteSelectedPair function
- Display modal to confirm user's decision to delete a key/template
  pair.

- Use different colors depending on modalDetails type property.

- Update all key/template pairs if user deletes a pair.

--- a/src/components/ButtonOptions/buttonOptions.scss
+++ b/src/components/ButtonOptions/buttonOptions.scss
@@ -32,9 +32,9 @@
 
     &.delete {
       color: $lightFontColor;
-      background-color: rgb(244, 49, 49);
+      background-color: $warningMed;
       &:hover {
-        background-color: rgb(183, 54, 54);
+        background-color: $warningDark;
       }
     }
 
