--- a/src/styles/variables/variables.scss
+++ b/src/styles/variables/variables.scss
@@ -5,6 +5,9 @@
 $myTextBackgroundColor: #c7d7d7;
 $aboutBackgroundColor: #729c9b;
 $instructionsBackgroundColor: #0b605e;
+$warningLight: #ffbfbf;
+$warningMed: #f43131;
+$warningDark: #b73636;
 
 // - Font
 $lightFontColor: #fefefe;
