--- a/src/components/KeyCollection/keyCollection.css
+++ b/src/components/KeyCollection/keyCollection.css
@@ -22,6 +22,9 @@
   background-color: #bdbaba;
 }
 
+.keyItem:hover {
+  cursor: pointer;
+}
 .keyItem span {
   display: inline-block;
   width: 100%;
