Update About content and styles

--- a/src/components/About/about.scss
+++ b/src/components/About/about.scss
@@ -6,10 +6,12 @@
   background-color: $aboutBackgroundColor;
 
   div {
+    min-height: 100%;
+    padding: 1rem;
+    background-color: #fefefe;
+
     h2 {
       @include viewHeading();
     }
-    padding: 1rem;
-    background-color: #fefefe;
   }
 }
