--- a/src/components/Accordion/accordion.scss
+++ b/src/components/Accordion/accordion.scss
@@ -1,1 +1,43 @@
 @import '../../styles/variables/variables.scss';
+
+.accordionContainer {
+  padding: 1rem 1rem;
+}
+
+.headingContainer {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+
+  &:hover {
+    cursor: pointer;
+  }
+
+  & > h3 {
+    font-size: 16px;
+  }
+}
+
+.bodyContainer {
+  display: none;
+  padding-top: 1rem;
+
+  &.isOpen {
+    display: block;
+  }
+
+  & > div {
+    & > h4 {
+      padding-bottom: 1rem;
+    }
+
+    & > ol {
+      padding-left: 1rem;
+
+      li {
+        padding-left: 0.5rem;
+        padding-bottom: 0.75rem;
+      }
+    }
+  }
+}
