--- a/src/components/About/about.css
+++ b/src/components/About/about.css
@@ -2,6 +2,7 @@
   height: 100%;
   padding: 1.5rem 1rem;
   background-color: #729c9b;
+  border-radius: 0 0 10px 10px;
 }
 .aboutContainer div {
   min-height: 100%;
