--- a/src/components/MainView/mainView.css
+++ b/src/components/MainView/mainView.css
@@ -4,6 +4,7 @@
   display: flex;
   gap: 2rem;
   background-color: #c7d7d7;
+  border-radius: 0 0 10px 10px;
 }
 .mainContainer h3 {
   font-size: 16px;
